--- a/scss/blocks/_banner.scss
+++ b/scss/blocks/_banner.scss
@@ -103,6 +103,7 @@
             font-weight: 800;
             font-size: 80px;
             letter-spacing: 0.05em;
+            line-height: 1;
             text-align: center;
             color: #f8f8f8;
 
@@ -154,14 +155,8 @@
         margin: auto auto 36px;
         max-width: 1110px;
 
-        display: flex;
-        justify-content: center;
-        flex-wrap: wrap;
-        gap: 20px;
-
         @media(max-width: $breakpoint768) {
             margin: 25px 0 40px 0;
-            gap: 12px;
         }
         @media(max-width: $breakpoint480) {
             margin-bottom: 36px;
@@ -171,7 +166,6 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            // flex-grow: 1;
 
             border: 1px solid #9a9a98;
             border-radius: 16px;
@@ -181,9 +175,39 @@
             @media(max-width: $breakpoint480) {
                 padding: 12px 16px;
             }
+            @media(max-width: $breakpoint375) {
+                padding: 10px;
+            }
 
             &:hover {
                 border-color: $main-color;
+            }
+        }
+
+        &-title {
+            margin: 0 auto 24px;
+            font-weight: 600;
+            font-size: 24px;
+            line-height: 130%;
+            text-align: center;
+            color: $black;
+
+            @media(max-width: $breakpoint480) {
+                margin-bottom: 22px;
+                font-size: 20px;
+            }
+        }
+        &-wrapper {
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            gap: 20px;
+
+            @media(max-width: $breakpoint768) {
+                gap: 12px;
+            }
+            @media(max-width: $breakpoint375) {
+                gap: 6px;
             }
         }
     }
@@ -201,7 +225,7 @@
             left: 0;
             transform: none;
 
-            margin-bottom: 16px;
+            margin: 0 auto 16px;
         }
 
         &-title {
