add new elements

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -65,6 +65,17 @@
 @import "./blocks/review";
 @import "./blocks/review-card";
 @import "./blocks/btn-without-container";
+@import "./blocks/catalog";
+@import "./blocks/catalog-list";
+@import "./blocks/catalog";
+@import "./blocks/catalog-params";
+@import "./blocks/filter";
+@import "./blocks/filter-category";
+@import "./blocks/filter-panel";
+@import "./blocks/filter-properties";
+@import "./blocks/pagination";
+@import "./blocks/pagination-list";
+@import "./blocks/params-list";
 @import "./blocks/ui";
 // Custom
 @import "./blocks/custom-checkbox";
