--- a/scss/blocks/_simplebar-scrollbar.scss
+++ b/scss/blocks/_simplebar-scrollbar.scss
@@ -22,6 +22,12 @@
         background: #DADADA;
         border-radius: 5px;
     }
+    &__catalog-card {
+        right: -21px;
+        width: 5px;
+        background: #DADADA;
+        border-radius: 5px;
+    }
     &__menu {
         margin-top: 30px;
         height: 300px;
