--- a/scss/main.scss
+++ b/scss/main.scss
@@ -76,6 +76,26 @@
 @import "./blocks/pagination";
 @import "./blocks/pagination-list";
 @import "./blocks/params-list";
+@import "./blocks/toggle-checkbox";
+@import "./blocks/section-card";
+@import "./blocks/form-modal";
+@import "./blocks/modal-form-block";
+@import "./blocks/wide-card";
+@import "./blocks/properties-wide-card";
+@import "./blocks/leasing-banner-img";
+@import "./blocks/leasing-adv";
+@import "./blocks/leasing-programs";
+@import "./blocks/leasing-steps";
+@import "./blocks/about-info";
+@import "./blocks/brands";
+@import "./blocks/brands-info";
+@import "./blocks/contacts";
+@import "./blocks/contacts-block";
+@import "./blocks/contacts-info";
+@import "./blocks/contacts-info-list";
+@import "./blocks/swiper-employees";
+@import "./blocks/employees";
+@import "./blocks/employees-card";
 @import "./blocks/ui";
 // Custom
 @import "./blocks/custom-checkbox";
