--- a/scss/blocks/_catalog-list.scss
+++ b/scss/blocks/_catalog-list.scss
@@ -6,6 +6,15 @@
         &--col {
             grid-template-columns: repeat(auto-fill, minmax(270px, 1fr));
             gap: 42px;
+
+            @media(max-width: $breakpoint1248) {
+                grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
+                gap: 28px;
+            } 
+            @media(max-width: $breakpoint660) {
+                grid-template-columns: none;
+                gap: 20px;
+            }
         }
         &--row {
             grid-template-columns: 1fr;
@@ -13,9 +22,15 @@
         }
     }
     &__item {
+        container: card / inline-size;
 
         & .products-card {
             padding: 8px 24px 28px 24px;
+
+            @media(max-width: $breakpoint768) {
+                padding: 8px 10px 28px 8px;
+            }
         }
     }
 }
+
