--- a/scss/blocks/_catalog-params.scss
+++ b/scss/blocks/_catalog-params.scss
@@ -3,10 +3,20 @@
     flex-direction: column;
     gap: 16px;
 
+    @media(max-width: $breakpoint768) {
+        gap: 12px;
+    }
+
     &__item {
         display: flex;
         align-items: center;
         gap: 8px;
+
+        @media(max-width: $breakpoint480) {
+            flex-direction: column;
+            align-items: start;
+            gap: 4px;
+        }
 
         &-name {
             min-width: 144px;
@@ -15,6 +25,14 @@
             font-size: 20px;
             line-height: 130%;
             color: $black;
+
+            @media(max-width: $breakpoint768) {
+                font-size: 18px;
+                min-width: auto;
+            }
+            @media(max-width: $breakpoint768) {
+                font-size: 16px;
+            }
         }
     }
 }
