--- a/scss/blocks/_fast-fiew-modal.scss
+++ b/scss/blocks/_fast-fiew-modal.scss
@@ -5,6 +5,11 @@
         max-width: $modal-width;
         width: 100%;
 
+        @media(max-width: $breakpoint992) {
+            top: 50px;
+            bottom: 20px;
+            translate: -50% 0;
+        }
         @media(max-width: calc($modal-width + 20px)) {
             max-width: 98vw;
         }
@@ -18,6 +23,19 @@
         }
         @media(max-width: $breakpoint375) { 
             padding: 36px 12px;
+        }
+    }
+
+    &__close {
+        display: flex;
+        position: absolute;
+        top: 36px;
+        right: 28px;
+    
+        @media(max-width: $breakpoint480) {
+            width: 12px;
+            top: 24px;
+            right: 24px;
         }
     }
 }
