--- a/scss/blocks/_leasing-banks.scss
+++ b/scss/blocks/_leasing-banks.scss
@@ -30,6 +30,29 @@
         }
     }
 
+    &__title {
+        font-weight: 700;
+        font-size: 24px;
+        line-height: 130%;
+        text-transform: uppercase;
+        color: #f8f8f8;
+
+        text-align: center;
+        margin-bottom: 40px;
+
+        @media(max-width: $breakpoint768) {
+            max-width: 350px;
+            margin: 0 auto 28px;
+
+            font-size: 22px;
+        }
+        @media(max-width: $breakpoint480) {
+            margin-bottom: 36px;
+            
+            font-size: 20px;
+        }
+    }
+
     &__item {
         display: flex;
         justify-content: center;
