--- a/scss/blocks/_modal.scss
+++ b/scss/blocks/_modal.scss
@@ -19,12 +19,10 @@
         translate: -50% -50%;
         z-index: 8;
         pointer-events: none;
+    }
 
-        @media(max-width: $breakpoint992) {
-            top: 50px;
-            bottom: 20px;
-            translate: -50% 0;
-        }
+    &__info {
+        height: 100%;
     }
 
     &__wrapper {
@@ -48,17 +46,3 @@
         pointer-events: none;
     }
 }
-
-.close-modal {
-    display: flex;
-    position: absolute;
-    top: 36px;
-    right: 28px;
-
-    @media(max-width: $breakpoint480) {
-        width: 12px;
-        top: 24px;
-        right: 24px;
-    }
-}
-
