--- a/scss/blocks/_pagination-list.scss
+++ b/scss/blocks/_pagination-list.scss
@@ -8,9 +8,17 @@
 
         &:first-child {
             margin-right: 16px;
+
+            @media(max-width: $breakpoint768) {
+                margin-right: 2px;
+            }
         }
         &:last-child {
             margin-left: 16px;
+
+            @media(max-width: $breakpoint768) {
+                margin-left: 2px;
+            }
         }
     }
     &__link {
@@ -28,12 +36,6 @@
         font-size: 16px;
         line-height: 130%;
         color: $text-color;
-
-        @media(max-width: $breakpoint375) {
-            width: 28px;
-            height: 28px;
-            font-size: 14px;
-        }
 
         &--active {
             border: 2px solid $main-color;
