compress img & add new styles

--- a/components/fancybox.html
+++ b/components/fancybox.html
@@ -26,33 +26,33 @@
 
     <script>
         // Gallery
-        Fancybox.bind('[data-fancybox="gallery"]', {
-            compact: false,
-            contentClick: "iterateZoom",
-            Images: {
-                Panzoom: {
-                    maxScale: 2,
-                },
-            },
-            wheel: "slide",
-            Toolbar: {
-                display: {
-                    left: [
-                        "infobar",
-                    ],
-                    middle: [],
-                    right: [
-                        "iterateZoom",
-                        "close",
-                    ],
-                }
-            }
-        });
+        // Fancybox.bind('[data-fancybox="gallery"]', {
+        //     compact: false,
+        //     contentClick: "iterateZoom",
+        //     Images: {
+        //         Panzoom: {
+        //             maxScale: 2,
+        //         },
+        //     },
+        //     wheel: "slide",
+        //     Toolbar: {
+        //         display: {
+        //             left: [
+        //                 "infobar",
+        //             ],
+        //             middle: [],
+        //             right: [
+        //                 "iterateZoom",
+        //                 "close",
+        //             ],
+        //         }
+        //     }
+        // });
 
-        // Video modal
-        Fancybox.bind('[data-fancybox="video"]', {
-            groupAttr: false
-        })
+        // // Video modal
+        // Fancybox.bind('[data-fancybox="video"]', {
+        //     groupAttr: false
+        // })
     </script>
 </body>
 
