--- a/scss/blocks/_custom-radio.scss
+++ b/scss/blocks/_custom-radio.scss
@@ -4,7 +4,7 @@
         display: none;
 
         &:checked + label:before {
-            background: url(../assets/img/icons/radio-2.png) 0 0 no-repeat;
+            background: url(../assets/img/icons/radio-2.svg) 0 0 no-repeat;
         }
         &:disabled + label:before {
             filter: grayscale(100%);
@@ -20,6 +20,10 @@
         line-height: 20px;
         user-select: none;
 
+        font-weight: 500;
+        font-size: 16px;
+        color: $black;
+
         &::before {
             content: "";
             display: inline-block;
@@ -28,7 +32,7 @@
             position: absolute;
             left: 0;
             bottom: 1px;
-            background: url(../assets/img/icons/radio-1.png) 0 0 no-repeat;
+            background: url(../assets/img/icons/radio-1.svg) 0 0 no-repeat;
         }
         &:hover {
             &::before {
