--- a/scss/main.scss
+++ b/scss/main.scss
@@ -96,6 +96,10 @@
 @import "./blocks/swiper-employees";
 @import "./blocks/employees";
 @import "./blocks/employees-card";
+@import "./blocks/calculator";
+@import "./blocks/calculator-info";
+@import "./blocks/calculator-input-container";
+@import "./blocks/range";
 @import "./blocks/ui";
 // Custom
 @import "./blocks/custom-checkbox";
