--- a/scss/blocks/_brands.scss
+++ b/scss/blocks/_brands.scss
@@ -40,6 +40,7 @@
         }
         @media(max-width: $breakpoint660) {
             padding: 22px 16px;
+            min-height: auto;
         }
 
         &:nth-child(-n+4) {
