--- a/scss/blocks/_breadcrumb.scss
+++ b/scss/blocks/_breadcrumb.scss
@@ -1,7 +1,9 @@
 .breadcrumb {
     display: flex;
     align-items: center;
-    gap: 8px;
+    flex-wrap: wrap;
+    column-gap: 8px;
+    row-gap: 4px;
 
     &__item {
         display: flex;
