--- a/scss/blocks/_characteristics.scss
+++ b/scss/blocks/_characteristics.scss
@@ -53,9 +53,13 @@
             font-size: 20px;
             color: $text-color;
 
-            & svg {
-                transform: translateY(2px);
-                fill: #9A9A98;
+            // & svg {
+            //     transform: translateY(2px);
+            //     fill: #9A9A98;
+            // }
+
+            &::after {
+                content: url(../assets/img/icons/select-arrow.svg);
             }
         }
     }
