--- a/scss/blocks/_contacts-info.scss
+++ b/scss/blocks/_contacts-info.scss
@@ -88,6 +88,7 @@
                 font-weight: 500;
                 font-size: 20px;
                 color: #000;
+                text-align: right;
 
                 @media(max-width: $breakpoint768) {
                     font-size: 18px;
