--- a/scss/blocks/_section.scss
+++ b/scss/blocks/_section.scss
@@ -254,3 +254,12 @@
 .calculator-section {
     padding-top: 25px;
 }
+
+.error-section {
+    background: url(../assets/img/bg/error-bg.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+
+    padding: 66px 0;
+}
