--- a/css/main.css
+++ b/css/main.css
@@ -500,6 +500,14 @@ h1 {
   padding-top: 25px;
 }
 
+.error-section {
+  background: url(../assets/img/bg/error-bg.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  padding: 66px 0;
+}
+
 .header {
   position: relative;
 }
@@ -8251,6 +8259,188 @@ h1 {
   border: 1px solid #a3a3a1;
   padding: 8px 30px;
   width: 100%;
+}
+
+.error__title {
+  font-weight: 800;
+  font-size: 48px;
+  line-height: 130%;
+  color: #323232;
+}
+@media (max-width: 992px) {
+  .error__title {
+    font-size: 40px;
+  }
+}
+@media (max-width: 768px) {
+  .error__title {
+    font-size: 36px;
+  }
+}
+@media (max-width: 480px) {
+  .error__title {
+    font-size: 32px;
+  }
+}
+.error__title span {
+  color: #FF6F00;
+}
+.error__text {
+  margin-top: 30px;
+  max-width: 710px;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 130%;
+  color: #9a9a98;
+}
+@media (max-width: 992px) {
+  .error__text {
+    font-size: 18px;
+  }
+}
+@media (max-width: 480px) {
+  .error__text {
+    margin-top: 20px;
+    font-size: 16px;
+  }
+}
+.error__link {
+  margin-top: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 16px;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+@media (max-width: 480px) {
+  .error__link {
+    margin-top: 20px;
+    gap: 12px;
+  }
+}
+.error__link:hover .error__link-icon {
+  background: transparent;
+  border: 1px solid #FF6F00;
+}
+.error__link:hover .error__link-icon svg {
+  fill: #FF6F00;
+  -webkit-transform: translateX(3px);
+          transform: translateX(3px);
+}
+.error__link-icon {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 74px;
+  height: 74px;
+  border-radius: 50%;
+  background: #FF6F00;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+@media (max-width: 480px) {
+  .error__link-icon {
+    width: 60px;
+    height: 60px;
+  }
+}
+.error__link-icon svg {
+  fill: #fff;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.error__link-text {
+  font-weight: 800;
+  font-size: 20px;
+  color: #323232;
+}
+@media (max-width: 768px) {
+  .error__link-text {
+    font-size: 18px;
+  }
+}
+@media (max-width: 480px) {
+  .error__link-text {
+    font-size: 16px;
+  }
+}
+.error__img {
+  position: relative;
+  margin-top: -110px;
+}
+@media (max-width: 1140px) {
+  .error__img {
+    margin-top: -90px;
+  }
+}
+@media (max-width: 992px) {
+  .error__img {
+    margin-top: 30px;
+  }
+}
+@media (max-width: 480px) {
+  .error__img {
+    margin-top: 20px;
+  }
+}
+.error__img::before {
+  position: absolute;
+  bottom: 60px;
+  content: "";
+  background-image: url(../assets/img/bg/error-line-bg.png);
+  background-position: center;
+  width: 100%;
+  height: 215px;
+  z-index: 1;
+}
+@media (max-width: 1140px) {
+  .error__img::before {
+    height: 140px;
+  }
+}
+@media (max-width: 480px) {
+  .error__img::before {
+    height: 80px;
+    bottom: auto;
+    top: 60%;
+    -webkit-transform: translateY(-50%);
+            transform: translateY(-50%);
+  }
+}
+.error__img-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
+}
+.error__img img {
+  position: relative;
+  z-index: 2;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+@media (max-width: 1140px) {
+  .error__img img {
+    max-width: 600px;
+  }
+}
+@media (max-width: 992px) {
+  .error__img img {
+    width: 100%;
+  }
 }
 
 .input {
