--- a/scss/main.scss
+++ b/scss/main.scss
@@ -100,6 +100,7 @@
 @import "./blocks/calculator-info";
 @import "./blocks/calculator-input-container";
 @import "./blocks/range";
+@import "./blocks/error";
 @import "./blocks/ui";
 // Custom
 @import "./blocks/custom-checkbox";
