--- a/css/main.css
+++ b/css/main.css
@@ -8378,6 +8378,7 @@ h1 {
 .error__img {
   position: relative;
   margin-top: -110px;
+  pointer-events: none;
 }
 @media (max-width: 1140px) {
   .error__img {
