--- a/scss/blocks/_error.scss
+++ b/scss/blocks/_error.scss
@@ -103,7 +103,7 @@
     &__img {
         position: relative;
         margin-top: -110px;
-        // pointer-events: none;
+        pointer-events: none;
 
         @media(max-width: $breakpoint1140) {
             margin-top: -90px;
