--- a/scss/main.scss
+++ b/scss/main.scss
@@ -77,6 +77,7 @@
 @import "./blocks/pagination-list";
 @import "./blocks/params-list";
 @import "./blocks/toggle-checkbox";
+@import "./blocks/toggle-radio";
 @import "./blocks/section-card";
 @import "./blocks/form-modal";
 @import "./blocks/modal-form-block";
